frontend/test/should_fail/retype_020optopt.grg
using retype_model_001;

rule r {
	x:TYPE1;

	optional {
		optional {
			modify {
				y:TYPE2<x>;
			}
		}

		modify {
			y:TYPE3<x>;
		}
	}

	modify {}
}

